Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-47176

QTextStream bad line ending

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.6.1
    • 5.2.1, 5.4.1
    • Core: I/O
    • None
    • Tested on Windows 7/2008 server:
      Qt 5.2.1 MSVC2012 32bit
      Qt 5.2.1 Mingw 32bit
      Qt 5.4.1 MSVC2013 32bit
      Qt 5.4.0 Linux GCC 64bit

      QTextStream writes wrong end line characters after readLine method was called at end of file.

      After inspecting QTextStreamPrivate::fillReadBuffer:

      Here texMode flag is changed in QIODevice:

          // handle text translation and bypass the Text flag in the device.
          bool textModeEnabled = device->isTextModeEnabled();
          if (textModeEnabled)
              device->setTextModeEnabled(false);
      

      Here it is restored:

          // reset the Text flag.
          if (textModeEnabled)
              device->setTextModeEnabled(true);
      

      But it will never be restored if this condition is true:

          if (bytesRead <= 0)
              return false;
      

        For Gerrit Dashboard: QTBUG-47176
        # Subject Branch Project Status CR V

            laknoll Lars Knoll
            dor666 Dorian Apanel
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes